--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="font/flaticon.css">
-  <link rel="stylesheet" href="fontawesome/css/all.css">
-  <link rel="stylesheet" href="owl.carousel.min.css">
-  <link rel="stylesheet" href="owl.theme.default.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="public/font/flaticon.css">
+  <link rel="stylesheet" href="public/fontawesome/css/all.css">
+  <link rel="stylesheet" href="public/owl.carousel.min.css">
+  <link rel="stylesheet" href="public/owl.theme.default.css">
+  <link rel="stylesheet" href="public/style.css">
   <title>paxlar project master clone</title>
 </head>
 <body class="font-bodyFont overflow-x-hidden">
@@ -36,7 +36,7 @@
   <div class="container">
     <div class="grid justify-between items-center grid-cols-4 py-3 px-2 gap-2 w-full">
       <div class="col-span-1 px-6">
-        <a class="w-10" href=""><img src="./images/Paxlar_logo.png" alt=""></a>
+        <a class="w-10" href=""><img src="public/images/Paxlar_logo.png" alt=""></a>
       </div>
       <div class="nav absolute xl:static xl:w-full w-1/2 bg-white p-7 top-28 -right-full col-span-3 transition-all duration-300">
         <ul class="flex xl:flex-row flex-col justify-around text-black-700 uppercase text-sm gap-6 xl:gap-0 text-center">
@@ -62,7 +62,7 @@
  <!-- Bottom Nav Section -->
 
  <!-- Hero Section -->
- <section class="bg-[url(./images/Banner_bg.jpg)] w-full bg-center bg-cover bg-no-repeat font-raleway h-fullvh md:h-76 grid  text-slate-100 text-center py-10 md:py-0">
+ <section class="bg-[url(.public/images/Banner_bg.jpg)] w-full bg-center bg-cover bg-no-repeat font-raleway h-fullvh md:h-76 grid  text-slate-100 text-center py-10 md:py-0">
     <div class="container">
         <div class="w-9/12 my-auto mx-auto grid gap-10">
             <h1 class="w-full text-6xl font-bold ">Secure & Easy Way to Bitcoin</h1>
@@ -95,18 +95,18 @@
  <section class="w-full py-24">
   <div class="container">
     <div class="px-10 grid md:grid-cols-3 gap-6 text-gray-500 text-sm">
-       <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('./images/bitcoin.png')]  hover:text-gray-100">
+       <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('public/images/bitcoin.png')]  hover:text-gray-100">
         <div class="mb-10 mt-5 text-paxlar group-hover:text-gray-300"><i class="py-10 flaticon-employee"></i></div>
         <h4 class="text-base font-semibold mb-2">Verif your ID</h4>
         <P class=" leading-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</P>
        </div>
-        <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('./images/bitcoin.png')]  hover:text-gray-100">
+        <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('public/images/bitcoin.png')]  hover:text-gray-100">
           <div class="mb-10 mt-5 text-paxlar group-hover:text-gray-300"><i class="py-10 flaticon-hand"></i></div>
         <h4 class="text-base font-semibold mb-2">Make your Payment</h4>
         <P class=" leading-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
         </P>
         </div>
-        <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('./images/bitcoin.png')]  hover:text-gray-100">
+        <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('public/images/bitcoin.png')]  hover:text-gray-100">
           <div class="mb-10 mt-5 text-paxlar group-hover:text-gray-300"><i class="py-10 flaticon-money-bag"></i></div>
         <h4 class="text-base font-semibold mb-2">Buy or Sells order</h4>
         <P class=" leading-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</P>
@@ -149,7 +149,7 @@
  <!-- Service Section -->
 
  <!-- Buy and Sell Section -->
- <section class="w-full pt-24 bg-[linear-gradient(to_top,rgba(0,0,0,0.35),rgba(0,0,0,0.35)),url('images/bitcoin_blur.jpg')] bg-no-repeat bg-cover bg-center text-white">
+ <section class="w-full pt-24 bg-[linear-gradient(to_top,rgba(0,0,0,0.35),rgba(0,0,0,0.35)),url('public/images/bitcoin_blur.jpg')] bg-no-repeat bg-cover bg-center text-white">
   <div class="container">
     <div class="grid md:grid-cols-2 gap-20">
       <div class="grid justify-center md:justify-end order-last md:order-first relative col-span-1">
@@ -284,7 +284,7 @@
  <!-- Experts Section -->
 
  <!-- Consultation Section -->
- <div class="py-24 bg-[url('./images/contact_bg.jpg')] bg-center bg-no-repeat bg-cover">
+ <div class="py-24 bg-[url('public/images/contact_bg.jpg')] bg-center bg-no-repeat bg-cover">
     <div class="heading text-white">
       <h1 class="heading-h1">free consultation</h1>
       <spanc class="heading-span"></span>
@@ -506,8 +506,8 @@
  </footer>
  <!-- Footer Section -->
 
-  <script src="jquery.js"></script>
-  <script src="owl.carousel.min.js"></script>
-  <script src="main.js"></script> 
+  <script src="public/jquery.js"></script>
+  <script src="public/owl.carousel.min.js"></script>
+  <script src="public/main.js"></script> 
 </body>
 </html>
