--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
       <div class="col-span-1 border border-gray-200 pb-5 rounded-lg">
         <div class="grid grid-cols-1 items-center">
           <div class="relative">
-            <img class="mb-2 w-full" src="images/blog1.png" alt="blog1.png">
+            <img class="mb-2 w-full" src="./public/images/blog1.png" alt="blog1.png">
             <span class="absolute -bottom-2 left-5 w-5 h-5 bg-orangeRed text-white p-5 text-xs rounded-full flex items-center justify-center"><i class="fas fa-link"></i></span>
           </div>
           <div class="flex w-8/12 justify-between m-auto text-xs text-gray-500 mb-5">
