--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="public/font/flaticon.css">
-  <link rel="stylesheet" href="public/fontawesome/css/all.css">
-  <link rel="stylesheet" href="public/owl.carousel.min.css">
-  <link rel="stylesheet" href="public/owl.theme.default.css">
-  <link rel="stylesheet" href="public/style.css">
+  <link rel="stylesheet" href="./public/font/flaticon.css">
+  <link rel="stylesheet" href="./public/fontawesome/css/all.css">
+  <link rel="stylesheet" href="./public/owl.carousel.min.css">
+  <link rel="stylesheet" href="./public/owl.theme.default.css">
+  <link rel="stylesheet" href="./public/style.css">
   <title>paxlar project master clone</title>
 </head>
 <body class="font-bodyFont overflow-x-hidden">
@@ -36,7 +36,7 @@
   <div class="container">
     <div class="grid justify-between items-center grid-cols-4 py-3 px-2 gap-2 w-full">
       <div class="col-span-1 px-6">
-        <a class="w-10" href=""><img src="public/images/Paxlar_logo.png" alt=""></a>
+        <a class="w-10" href=""><img src="./public/images/Paxlar_logo.png" alt=""></a>
       </div>
       <div class="nav absolute xl:static xl:w-full w-1/2 bg-white p-7 top-28 -right-full col-span-3 transition-all duration-300">
         <ul class="flex xl:flex-row flex-col justify-around text-black-700 uppercase text-sm gap-6 xl:gap-0 text-center">
@@ -62,7 +62,7 @@
  <!-- Bottom Nav Section -->
 
  <!-- Hero Section -->
- <section class="bg-[url(.public/images/Banner_bg.jpg)] w-full bg-center bg-cover bg-no-repeat font-raleway h-fullvh md:h-76 grid  text-slate-100 text-center py-10 md:py-0">
+ <section class="bg-[url(./images/Banner_bg.jpg)] w-full bg-center bg-cover bg-no-repeat font-raleway h-fullvh md:h-76 grid  text-slate-100 text-center py-10 md:py-0">
     <div class="container">
         <div class="w-9/12 my-auto mx-auto grid gap-10">
             <h1 class="w-full text-6xl font-bold ">Secure & Easy Way to Bitcoin</h1>
@@ -95,18 +95,18 @@
  <section class="w-full py-24">
   <div class="container">
     <div class="px-10 grid md:grid-cols-3 gap-6 text-gray-500 text-sm">
-       <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('public/images/bitcoin.png')]  hover:text-gray-100">
+       <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('./images/bitcoin.png')]  hover:text-gray-100">
         <div class="mb-10 mt-5 text-paxlar group-hover:text-gray-300"><i class="py-10 flaticon-employee"></i></div>
         <h4 class="text-base font-semibold mb-2">Verif your ID</h4>
         <P class=" leading-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</P>
        </div>
-        <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('public/images/bitcoin.png')]  hover:text-gray-100">
+        <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('./images/bitcoin.png')]  hover:text-gray-100">
           <div class="mb-10 mt-5 text-paxlar group-hover:text-gray-300"><i class="py-10 flaticon-hand"></i></div>
         <h4 class="text-base font-semibold mb-2">Make your Payment</h4>
         <P class=" leading-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
         </P>
         </div>
-        <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('public/images/bitcoin.png')]  hover:text-gray-100">
+        <div class="group border border-gray-300 rounded-md py-14 px-5 text-center hover:bg-[linear-gradient(to_top,rgba(255,156,26,.8),rgba(175,255,26,.8)),url('./images/bitcoin.png')]  hover:text-gray-100">
           <div class="mb-10 mt-5 text-paxlar group-hover:text-gray-300"><i class="py-10 flaticon-money-bag"></i></div>
         <h4 class="text-base font-semibold mb-2">Buy or Sells order</h4>
         <P class=" leading-4">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</P>
@@ -126,17 +126,17 @@
   <div class="container">
     <div class="grid md:grid-cols-3 gap-5">
         <div class="mb-4 grid gap-5 text-center px-3">
-          <img class="w-28 h-28 m-auto" src="images/circle_bitcoin.png" alt="btc">
+          <img class="w-28 h-28 m-auto" src="./public/images/circle_bitcoin.png" alt="btc">
           <h2 class="text-xl font-semibold">Bitcoin</h2>
           <p class="leading-4 text-gray-500 text-sm mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less.</p>
         </div>
         <div class="mb-4 grid gap-5 text-center px-3">
-          <img class="w-28 h-28 m-auto" src="images/bitcoin_transaction.png" alt="transaction">
+          <img class="w-28 h-28 m-auto" src="./public/images/bitcoin_transaction.png" alt="transaction">
           <h2 class="text-lg font-semibold">Bitcoin Transaction</h2>
           <p class="leading-4 text-gray-500 text-sm mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less.</p>
         </div>
         <div class="mb-4 grid gap-5 text-center px-3">
-          <img class="w-28 h-28 m-auto" src="images/bitcoin_exchange.png" alt="exchange">
+          <img class="w-28 h-28 m-auto" src="./public/images/bitcoin_exchange.png" alt="exchange">
           <h2 class="text-lg font-semibold">Bitcoin Exchange</h2>
           <p class="leading-4 text-gray-500 text-sm mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less.</p>
         </div>
@@ -149,12 +149,12 @@
  <!-- Service Section -->
 
  <!-- Buy and Sell Section -->
- <section class="w-full pt-24 bg-[linear-gradient(to_top,rgba(0,0,0,0.35),rgba(0,0,0,0.35)),url('public/images/bitcoin_blur.jpg')] bg-no-repeat bg-cover bg-center text-white">
+ <section class="w-full pt-24 bg-[linear-gradient(to_top,rgba(0,0,0,0.35),rgba(0,0,0,0.35)),url('images/bitcoin_blur.jpg')] bg-no-repeat bg-cover bg-center text-white">
   <div class="container">
     <div class="grid md:grid-cols-2 gap-20">
       <div class="grid justify-center md:justify-end order-last md:order-first relative col-span-1">
-        <img class="h-full" src="images/iphone6.png" alt="iphone">
-        <img class="absolute right-1/3 md:left-1/3 top-1/2 -translate-x-1/3 xl:translate-x-1/3 translate-y-1/2 scale-125" src="images/Paxlar_logo.png" alt="logo">
+        <img class="h-full" src="./public/images/iphone6.png" alt="iphone">
+        <img class="absolute right-1/3 md:left-1/3 top-1/2 -translate-x-1/3 xl:translate-x-1/3 translate-y-1/2 scale-125" src="./public/images/Paxlar_logo.png" alt="logo">
       </div>
     <div class="grid col-span-1">
         <div class="text-start w-full mb-12">
@@ -248,7 +248,7 @@
           <span class="rotated-span after:border-blue-400 text-blue-400"><i class="scale-125 fas fa-lock"></i></span>
           <strong class="text-lg text-gray-400">Experts support</strong>
       </div>
-  <img class="hidden lg:block lg-:w-2/5 m-auto py-10" src="images/bitcoin_tree.png" alt="btc">
+  <img class="hidden lg:block lg-:w-2/5 m-auto py-10" src="./public/images/bitcoin_tree.png" alt="btc">
 </div>
   </div>
  </section>
@@ -264,17 +264,17 @@
   <div class="container">
     <div class="grid sm:grid-cols-3 w-11/12 m-auto text-center justify-center  gap-5">
         <div class="flex flex-col items-center justify-center">
-          <img class="w-9/12 h-10/12 mb-10 object-cover" src="images/person1.png" alt="team-person">
+          <img class="w-9/12 h-10/12 mb-10 object-cover" src="./public/images/person1.png" alt="team-person">
           <h3 class="text-lg font-semibold mb-3">John Anderson</h3>
           <span class="text-paxlar text-sm">Consultant</span>
         </div>
         <div class="flex flex-col items-center justify-center">
-          <img class="w-9/12 h-10/12 mb-10 object-cover" src="images/person2.png" alt="team-person">
+          <img class="w-9/12 h-10/12 mb-10 object-cover" src="./public/images/person2.png" alt="team-person">
           <h3 class="text-lg font-semibold mb-3">John Anderson</h3>
           <span class="text-paxlar text-sm">Consultant</span>
         </div>
         <div class="flex flex-col items-center justify-center">
-          <img class="w-9/12 h-10/12 mb-10 object-cover" src="images/person3.png" alt="team-person">
+          <img class="w-9/12 h-10/12 mb-10 object-cover" src="./public/images/person3.png" alt="team-person">
           <h3 class="text-lg font-semibold mb-3">John Anderson</h3>
           <span class="text-paxlar text-sm">Consultant</span>
         </div>
@@ -284,7 +284,7 @@
  <!-- Experts Section -->
 
  <!-- Consultation Section -->
- <div class="py-24 bg-[url('public/images/contact_bg.jpg')] bg-center bg-no-repeat bg-cover">
+ <div class="py-24 bg-[url('./images/contact_bg.jpg')] bg-center bg-no-repeat bg-cover">
     <div class="heading text-white">
       <h1 class="heading-h1">free consultation</h1>
       <spanc class="heading-span"></span>
@@ -343,7 +343,7 @@
       <div class="col-span-1 border border-gray-200 pb-5 rounded-lg">
         <div class="grid grid-cols-1 items-center">
           <div class="relative">
-            <img class="mb-2 w-full h-full object-cover" src="images/blog2.png" alt="blog2.png">
+            <img class="mb-2 w-full h-full object-cover" src="./public/images/blog2.png" alt="blog2.png">
             <span class="absolute -bottom-2 left-5 w-5 h-5 bg-orangeRed text-white p-5 text-xs rounded-full flex items-center justify-center"><i class="fas fa-link"></i></span>
           </div>
           <div class="flex w-8/12 justify-between m-auto text-xs text-gray-500 mb-5">
@@ -361,7 +361,7 @@
       <div class="col-span-1 border border-gray-200 pb-5 rounded-lg">
         <div class="grid grid-cols-1 items-center">
           <div class="relative">
-            <img class="mb-2 w-full h-full object-cover" src="images/blog3.png" alt="blog1.png">
+            <img class="mb-2 w-full h-full object-cover" src="./public/images/blog3.png" alt="blog1.png">
             <span class="absolute -bottom-2 left-5 w-5 h-5 bg-orangeRed text-white p-5 text-xs rounded-full flex items-center justify-center"><i class="fas fa-link"></i></span>
           </div>
           <div class="flex w-8/12 justify-between m-auto text-xs text-gray-500 mb-5">
@@ -393,7 +393,7 @@
     <div class="feedback">
       <p class="leading-4 text-gray-500 text-sm mb-20">LIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here</p>
       <div class="w-24 h-24  m-auto relative mb-5">
-        <img class="w-full h-full rounded-full object-cover" src="images/feedback.png" alt="feedback">
+        <img class="w-full h-full rounded-full object-cover" src="./public/images/feedback.png" alt="feedback">
         <span class="absolute bottom-1 border-2 border-white bg-paxlar text-white w-9 h-9 flex items-center justify-center rounded-full text-sm right-0"><i class="fas fa-quote-right"></i></span>
       </div>
       <h3 class="font-semibold mb-2">Jessica Williams</h3>
@@ -402,7 +402,7 @@
     <div class="feedback">
       <p class="leading-4 text-gray-500 text-sm mb-20">LIt is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here</p>
       <div class="w-24 h-24  m-auto relative mb-5">
-        <img class="w-full h-full rounded-full object-cover" src="images/bitcoin.png" alt="feedback">
+        <img class="w-full h-full rounded-full object-cover" src="./public/images/bitcoin.png" alt="feedback">
         <span class="absolute bottom-1 border-2 border-white bg-paxlar text-white w-9 h-9 flex items-center justify-center rounded-full text-sm right-0"><i class="fas fa-quote-right"></i></span>
       </div>
       <h3 class="font-semibold mb-2">Jessica Williams</h3>
@@ -422,7 +422,7 @@
       <div class="grid sm:grid-cols-4 gap-10 text-ftc text-sm">
         <div class="col-md-3">
             <div class="top">
-              <img class="mb-16" src="images/footer_logo.png" alt="footer_logo">
+              <img class="mb-16" src="./public/images/footer_logo.png" alt="footer_logo">
             <p class="mb-10">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste tenetur eaque animi. Earum repudiandae quidem cum nemo, amet fugiat velit eveniet possimus at, voluptatum vel tempora ipsam modi ex? Nemo, recusandae quis voluptates culpa quaerat unde dolorum corrupti ipsum incidunt doloremque, fugit perspiciatis pariatur cum odio iure? Labore, quam repudiandae!</p>
             <ul class="flex gap-3">
               <li class="border border-ftc rounded-full w-10 h-10 flex items-center justify-center"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -506,8 +506,8 @@
  </footer>
  <!-- Footer Section -->
 
-  <script src="public/jquery.js"></script>
-  <script src="public/owl.carousel.min.js"></script>
-  <script src="public/main.js"></script> 
+  <script src="./public/jquery.js"></script>
+  <script src="./pblic/owl.carousel.min.js"></script>
+  <script src="./public/main.js"></script> 
 </body>
 </html>
