--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
  <!-- Footer Section -->
 
   <script src="./public/jquery.js"></script>
-  <script src="./pblic/owl.carousel.min.js"></script>
+  <script src="./public/owl.carousel.min.js"></script>
   <script src="./public/main.js"></script> 
 </body>
 </html>
