--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </ul>
       </div>
       
-      <div class="xl:hidden relative justify-self-end col-span-3 w-10 h-8 cursor-pointer burger">
+      <div class="xl:hidden relative justify-self-end col-span-3 w-10 h-8 cursor-pointer burger my-3">
         <div class="w-full h-1 block bg-black absolute top-0"></div>
         <div class="w-full h-1 block bg-black absolute top-1/2 -translate-y-1/2"></div>
         <div class="w-full h-1 block bg-black absolute bottom-0"></div>
