--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
     <div class="grid md:grid-cols-3 gap-5">
         <div class="mb-4 grid gap-5 text-center p-3 transition-all duration-300 ease-in hover:border hover:border-gray-300 hover:shadow-md hover:-translate-y-2">
           <img class="w-28 h-28 m-auto" src="./public/images/circle_bitcoin.png" alt="btc">
-          <h2 class="text-xl font-semibold">Bitcoin</h2>
+          <h2 class="text-xl font-semibold"><a href="">Bitcoin</a></h2>
           <p class="leading-5 text-gray-500 text-sm mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less.</p>
         </div>
         <div class="mb-4 grid gap-5 text-center p-3 transition-all duration-300 ease-in hover:border hover:border-gray-300 hover:shadow-md hover:-translate-y-2">
           <img class="w-28 h-28 m-auto" src="./public/images/bitcoin_transaction.png" alt="transaction">
-          <h2 class="text-lg font-semibold">Bitcoin Transaction</h2>
+          <h2 class="text-lg font-semibold"><a href="">Bitcoin Transaction</a></h2>
           <p class="leading-5 text-gray-500 text-sm mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less.</p>
         </div>
         <div class="mb-4 grid gap-5 text-center p-3 transition-all duration-300 ease-in hover:border hover:border-gray-300 hover:shadow-md hover:-translate-y-2">
           <img class="w-28 h-28 m-auto" src="./public/images/bitcoin_exchange.png" alt="exchange">
-          <h2 class="text-lg font-semibold">Bitcoin Exchange</h2>
+          <h2 class="text-lg font-semibold"><a href="">Bitcoin Exchange</a></h2>
           <p class="leading-5 text-gray-500 text-sm mb-5">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less.</p>
         </div>
     </div>
@@ -267,17 +267,17 @@
     <div class="grid sm:grid-cols-3 w-11/12 m-auto text-center justify-center  gap-5">
         <div class="flex flex-col items-center justify-center bg-white shadow-lg py-8 rounded-md hover:shadow-md">
           <img class="w-9/12 h-10/12 mb-10 object-cover" src="./public/images/person1.png" alt="team-person">
-          <h3 class="text-lg font-semibold mb-3">John Anderson</h3>
+          <h3 class="text-lg font-semibold mb-3"><a href="">John Anderson</a></h3>
           <span class="text-paxlar text-sm">Consultant</span>
         </div>
         <div class="flex flex-col items-center justify-center bg-white shadow-lg py-8 rounded-md hover:shadow-md">
           <img class="w-9/12 h-10/12 mb-10 object-cover" src="./public/images/person2.png" alt="team-person">
-          <h3 class="text-lg font-semibold mb-3">John Anderson</h3>
+          <h3 class="text-lg font-semibold mb-3"><a href="">John Anderson</a></h3>
           <span class="text-paxlar text-sm">Consultant</span>
         </div>
         <div class="flex flex-col items-center justify-center bg-white shadow-lg py-8 rounded-md hover:shadow-md">
           <img class="w-9/12 h-10/12 mb-10 object-cover" src="./public/images/person3.png" alt="team-person">
-          <h3 class="text-lg font-semibold mb-3">John Anderson</h3>
+          <h3 class="text-lg font-semibold mb-3"><a href="">John Anderson</a></h3>
           <span class="text-paxlar text-sm">Consultant</span>
         </div>
     </div>
@@ -336,7 +336,7 @@
           </div>
          <div class="container">
           <div class="w-11/12 m-auto">
-            <h1 class="text-base font-semibold text-gray-800 mb-2">It is a long established fact that a reader will be distracted</h1>
+            <h1 class="text-base font-semibold text-gray-800 mb-2"><a href="">It is a long established fact that a reader will be distracted</a></h1>
             <p class="leading-5 text-gray-500 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet atque mollitia ullam neque quo voluptates suscipit sunt ab quidem sint?</p>
           </div>
          </div>
@@ -354,7 +354,7 @@
           </div>
          <div class="container">
           <div class="w-11/12 m-auto">
-            <h1 class="text-base font-semibold text-gray-800 mb-2">It is a long established fact that a reader will be distracted</h1>
+            <h1 class="text-base font-semibold text-gray-800 mb-2"><a href="">It is a long established fact that a reader will be distracted</a></h1>
             <p class="leading-5 text-gray-500 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet atque mollitia ullam neque quo voluptates suscipit sunt ab quidem sint?</p>
           </div>
          </div>
@@ -372,7 +372,7 @@
           </div>
          <div class="container">
           <div class="w-11/12 m-auto">
-            <h1 class="text-base font-semibold text-gray-800 mb-2">It is a long established fact that a reader will be distracted</h1>
+            <h1 class="text-base font-semibold text-gray-800 mb-2"><a href="">It is a long established fact that a reader will be distracted</a></h1>
             <p class="leading-5 text-gray-500 text-sm">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet atque mollitia ullam neque quo voluptates suscipit sunt ab quidem sint?</p>
           </div>
          </div>
